2005/05/01
        RELEASE 2.1.1

	Fixed a number of bugs relating to 2.0 backward compatibility.

	Added a patch to


2005/04/12
        RELEASE 2.1.0

        Merged TripleStore and InformationStore into Graph.

        Added plugin support (or at least cleaned up, made consistent the
        plugin support that existed).

        Added value and seq methods to Graph.
        
        Renamed prefix_mapping to bind.

        Added namespaces method that is a generator over all prefix,
        namespace bindings.

        Added notion of NamespaceManager.

        Added couple new backends, IOMemory and ZODB.
        
        
2005/03/19
        RELEASE 2.0.6

        Added pretty-xml serializer (inlines BNodes where possible,
        typed nodes, Collections).

        Fixed bug in NTParser and n3 methods where not all characters
        where being escaped.

        Changed label and comment methods to return default passed in
        when there is no label or comment. Moved methods to Store
        Class. Store no longer inherits from Schema.

        Fixed bug involving a case with rdf:about='#'

        Changed InMemoryBackend to update third index in the same style it
        does the first two.

        
2005/01/08
        RELEASE 2.0.5

        Added publicID argument to Store's load method.

        Added RDF and RDFS to top level rdflib package.


2004/10/14
        RELEASE 2.0.4

        Removed unfinished functionality.

        Fixed bug where another prefix other than rdf was getting
        defined for the rdf namespace (causing an assertion to fail).

        Fixed bug in serializer where nodeIDs were not valid NCNames.


2004/04/21
        RELEASE 2.0.3

        Added missing "from __future__ import generators" statement to
        InformationStore. 

        Simplified RDF/XML serializer fixing a few bugs involving
        BNodes.

        Added a reset method to RDF/XML parser.

        Changed 'if foo' to "if foo is not None" in a few places in