@@ -3,7 +3,11 @@
 
 	Fixed a number of bugs relating to 2.0 backward compatibility.
 
-	Added a patch to
+	Fixed split_uri to handle URIs with _ in them properly.
+
+	Fixed bug in RDF/XML handler's absolutize that would cause some URIRefs to end in ##
+
+	Added check_context to Graph
 
 
 2005/04/12
